# nasake

./: .env.dev  .gitattributes  .gitignore  Dockerfile  Makefile  Nasake_Final_Documentation.docx  README.md  config.py  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  schemas.py  vercel.json
ChatRoom/: main.py
ChatRoom/static/css/: style.css  styles2.css
ChatRoom/static/js/: script.js
ChatRoom/templates/: index.html
Movies/: movies.py
Movies/templates/: index.html  watchlist.html
internal/: analysis.py  error.py  session.py  spotify.py
internal/models/emotion/: config.json  model.safetensors
internal/tests/: adhd.py  anxiety.py  bipolar.py  depression.py  psychosis.py  ptsd.py  youth.py
models/: database.py  journal.py  schemas.py  test.py  therapist.py  user.py
routers/: auth.py  chat.py  chat_room.py  disorders.py  home.py  journal.py  profile.py  search.py  spotify.py  tests.py
server/: api.py  app.py
static/: chat.js  chat_room.js  search.js  styles.css
templates/: analysis.html  anxiety.html  base.html  chat.html  chat_room.html  depression.html  disorders.html  error.html  helplines.html  home.html  index.html  journal.html  login.html  playlist.html  profile.html  psychosis.html  result.html  search.html  selfHarm.html  signup.html  test.html  tests.html  zen.html
